# gpumanager

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  api_keys.json.example  config.toml.example  pyproject.toml
docs/: curltests.md
gpu-node/: Caddyfile  docker-compose.yml  entrypoint.sh  install-docker.sh  setup.sh
manager-node/: docker-compose.yml  setup.sh
src/gpumanager/: __init__.py  deployment.py  main.py  sync.py
src/gpumanager/api/: handlers.py  middleware.py  ollama_models.py  ollama_proxy.py
src/gpumanager/auth/: manager.py  models.py
src/gpumanager/cloud/: api.py  models.py
src/gpumanager/config/: loader.py  models.py
src/gpumanager/gpu/: manager.py  models.py  state.py
tests/: reproduce_discovery.py  test_gpu_manager.py  test_integration.py  test_list_models_autowake.py  test_ollama_proxy.py  test_remote_discovery.py  test_remote_pull.py
